# 2DEngine

./: CMakeLists.txt  LICENSE  build.sh  build_linux.sh  build_window.bat
2DEngine/: CMakeLists.txt
2DEngine/include/2DEngine/Actor/: Actor.hpp
2DEngine/include/2DEngine/Component/: Component.hpp
2DEngine/include/2DEngine/Component/Sprite/: SpriteComponent.hpp
2DEngine/include/2DEngine/Game/: Game.hpp
2DEngine/include/2DEngine/Game/Math/: Math.hpp
2DEngine/include/2DEngine/Game/Renderer/: Renderer.hpp
2DEngine/include/2DEngine/Renderer/: Renderer.hpp
2DEngine/include/2DEngine/Scene/: Scene.hpp
2DEngine/include/Actor/: Actor.hpp
2DEngine/src/: main.cpp
2DEngine/src/Actor/: Actor.cpp
2DEngine/src/Component/: Component.cpp
2DEngine/src/Component/Sprite/: SpriteComponent.cpp
2DEngine/src/Game/: Game.cpp
2DEngine/src/Game/Math/: Math.cpp
2DEngine/src/Game/Renderer/: Renderer.cpp
2DEngine/src/Renderer/: Renderer.cpp
2DEngine/src/Scene/: Scene.cpp
2DEngineDemo/: CMakeLists.txt
2DEngineDemo/include/GameObject/: Ship.hpp
2DEngineDemo/src/: main.cpp
2DEngineDemo/src/GameObject/: Ship.cpp
src/: main.cpp
